=== 1.2

* Minor Enhancements
  * Net::HTTP#read_timeout is now supported
  * Net::HTTP#open_timeout is now supported

=== 1.1 / 2010-05-18

* Minor Enhancements
  * Proxy support, see Net::HTTP::Persistent::new,
    Net::HTTP::Persistent#proxy_from_env
  * Added +name+ parameter to Net::HTTP::Persistent::new for separation of
    connection pools.
  * Added Net::HTTP::Persistent#shutdown so you can clean up after yourself
  * Net::HTTP::Persistent now suppresses "peer certificate won't be verified
    in this SSL session" warning.

* Bug Fixes
  * Net::HTTP::Persistent retries requests in accordance with RFC 2616.

=== 1.0.1 / 2010-05-05

* Minor Enhancements
  * Added #debug_output
  * Now uses Hoe minitest plugin
* Bug Fixes
  * Tests pass on 1.9

=== 1.0.0 / 2010-05-04

* Major Enhancements
  * Birthday!
